Fixed an issue where whitespace was not preserved for string values

--- a/public_html/scss/cm-parsers.scss
+++ b/public_html/scss/cm-parsers.scss
@@ -99,7 +99,7 @@
     }
 
     .stringValue{
-        white-space: normal;
+        white-space: pre;
     }
     .brace{
         display: inline-block;
